Base Demo Change

--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
 
         window.WEBCAM_SETTINGS = {
             video: {
+                // width:{ideal:1920},
+                // height:{ideal:1024},
                 facingMode: unityFacingMode,
             },
             audio: false
