--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
         }, 500);
 
         var buildUrl = "Build";
-        var loaderUrl = buildUrl + "/OriginAR.loader.js";
+        var loaderUrl = buildUrl + "/DragRace6OPAR.loader.js";
         var config = {
-          dataUrl: buildUrl + "/OriginAR.data",
-          frameworkUrl: buildUrl + "/OriginAR.framework.js",
-          codeUrl: buildUrl + "/OriginAR.wasm",
+          dataUrl: buildUrl + "/DragRace6OPAR.data",
+          frameworkUrl: buildUrl + "/DragRace6OPAR.framework.js",
+          codeUrl: buildUrl + "/DragRace6OPAR.wasm",
           streamingAssetsUrl: "StreamingAssets",
           companyName: "DefaultCompany",
           productName: "DragRacerGame",
@@ -180,7 +180,7 @@
           document.getElementsByTagName('head')[0].appendChild(meta);
         }
 
-        canvas.style.background = "url('" + buildUrl + "/OriginAR.jpg') center / cover";
+        canvas.style.background = "url('" + buildUrl + "/DragRace6OPAR.jpg') center / cover";
         loadingBar.style.display = "block";
 
         var script = document.createElement("script");
